--- a/incursion.ipynb
+++ b/incursion.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -419,12 +419,11 @@
     "            with rasterio.open(output_path, 'w', **out_profile) as dest:\n",
     "                dest.write(out_image)\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    path_slope = 'output/output.tif'\n",
-    "    path_rosetta = 'Soils/PIRange-001/PIRange_Bulkd.30-60cm.tif'\n",
-    "    path_name_output = 'output/output_bulkd.tif'\n",
+    "path_slope = 'output/output.tif'\n",
+    "path_rosetta = 'Soils/PIRange-001/PIRange_Bulkd.30-60cm.tif'\n",
+    "path_name_output = 'output/output_bulkd.tif'\n",
     "    \n",
-    "    intersect_tiffs(path_slope, path_rosetta, path_name_output)"
+    "intersect_tiffs(path_slope, path_rosetta, path_name_output)"
    ]
   },
   {
@@ -943,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1093,6 +1092,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "def load_models_and_features(model_path: str):\n",
+    "    # Carga el modelo y las caracteristicas a utilizar\n",
+    "    # output:\n",
+    "    #   model: sklearn.model_selection\n",
+    "    #   features: listv\n",
+    "    with open(model_path, 'rb') as model_file:\n",
+    "        model = pickle.load(model_file)\n",
+    "    features = model.best_estimator_.feature_names_\n",
+    "    return model, features\n",
+    "\n",
+    "def data_from_features_model(features: list, PATH = 'Soils/'):\n",
+    "    # Primero voy a crear una lista de todos los archivos que están dentro de cada carpeta de la\n",
+    "    # carpeta de Soils/\n",
+    "    # ej: Abrir Soils Abrir 'ROSETTA_MEAN' crear lista de todos los archivos dentro de 'ROSETTA_MEAN'\n",
+    "    \n",
+    "    # Se obtienen las carpetas dentro de SOILS/\n",
+    "    files = [f for f in os.listdir(PATH)]    \n",
+    "    \n",
+    "    # Ahora creo un diccionario donde a partir del nombre de la carpeta se obtengan todos los\n",
+    "    # tif que estan dentro de esta\n",
+    "    files_dict = {file: os.listdir(PATH + '/' + file) for file in files}\n",
+    "    # ahora de esta forma podemos pedir las features del modelo y verificamos a traves del diccionario\n",
+    "    # donde estan ubicada cada feature para de esta forma obtener los datos necesarios\n",
+    "    #path_file = []\n",
+    "    path_file = [k +'/'+i for k,v in files_dict.items() for i in v if i in features]\n",
+    "    print('-'*50)\n",
+    "    print(f'path de cada archivo: {path_file}\\n')\n",
+    "    \n",
+    "    # Ahora a partir de la entrada features: list se obtendran los path necesarios para luego extraer\n",
+    "    # cada dato necesario de los tif\n",
+    "    \n",
+    "    # crear lista de paths, a cada feature le corresponde un path dentro de la lista paths\n",
+    "    # ciclo para abrir tif para cada paths\n",
+    "    # PREGUNTAR: como obtengo los pixeles (o lat lon)\n",
+    "    return path_file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo: <class 'sklearn.model_selection._search.RandomizedSearchCV'>\n",
+      "\n",
+      "Caracteristicas: ['slope', 'valor_humedad_suelo1', 'PP', 'PIRange_Clay.15-30cm.tif', 'ksat_60-100cm.tif', 'n_60-100cm.tif', 'n_15-30cm.tif', 'n_5-15cm.tif', 'PIRange_Clay.0-5cm.tif', 'alpha.0-5cm.tif', 'PIRange_Clay.5-15cm.tif', 'PIRange_Bulkd.100-200cm.tif', 'PIRange_Bulkd.5-15cm.tif', 'PIRange_Sand.0-5cm.tif', 'PIRange_Sand.15-30cm.tif', 'Bulkd.5-15cm.tif', 'ksat_100-200cm.tif', 'PIRange_Sand.100-200cm.tif', 'ksat_15-30cm.tif', 'Bulkd.100-200cm.tif']\n",
+      "\n",
+      "Cantidad de caracteristcas: 20\n",
+      "--------------------------------------------------\n",
+      "path de cada archivo: ['PIRange-001/PIRange_Bulkd.100-200cm.tif', 'PIRange-001/PIRange_Bulkd.5-15cm.tif', 'PIRange-001/PIRange_Clay.0-5cm.tif', 'PIRange-001/PIRange_Clay.15-30cm.tif', 'PIRange-001/PIRange_Clay.5-15cm.tif', 'PIRange-001/PIRange_Sand.0-5cm.tif', 'PIRange-001/PIRange_Sand.100-200cm.tif', 'PIRange-001/PIRange_Sand.15-30cm.tif', 'ROSETTA_MEAN/ksat_100-200cm.tif', 'ROSETTA_MEAN/ksat_15-30cm.tif', 'ROSETTA_MEAN/ksat_60-100cm.tif', 'ROSETTA_MEAN/n_15-30cm.tif', 'ROSETTA_MEAN/n_5-15cm.tif', 'ROSETTA_MEAN/n_60-100cm.tif', 'ROSETTA_SD/alpha.0-5cm.tif', 'SoilMaps_MEAN/Bulkd.100-200cm.tif', 'SoilMaps_MEAN/Bulkd.5-15cm.tif']\n",
+      "\n",
+      "<class 'list'>\n",
+      "Los path de todos los files ['PIRange-001/PIRange_Bulkd.100-200cm.tif', 'PIRange-001/PIRange_Bulkd.5-15cm.tif', 'PIRange-001/PIRange_Clay.0-5cm.tif', 'PIRange-001/PIRange_Clay.15-30cm.tif', 'PIRange-001/PIRange_Clay.5-15cm.tif', 'PIRange-001/PIRange_Sand.0-5cm.tif', 'PIRange-001/PIRange_Sand.100-200cm.tif', 'PIRange-001/PIRange_Sand.15-30cm.tif', 'ROSETTA_MEAN/ksat_100-200cm.tif', 'ROSETTA_MEAN/ksat_15-30cm.tif', 'ROSETTA_MEAN/ksat_60-100cm.tif', 'ROSETTA_MEAN/n_15-30cm.tif', 'ROSETTA_MEAN/n_5-15cm.tif', 'ROSETTA_MEAN/n_60-100cm.tif', 'ROSETTA_SD/alpha.0-5cm.tif', 'SoilMaps_MEAN/Bulkd.100-200cm.tif', 'SoilMaps_MEAN/Bulkd.5-15cm.tif']\n"
+     ]
+    }
+   ],
+   "source": [
+    "model, features = load_models_and_features('models/catboost_model_random_search.pkl')\n",
+    "print(f'Modelo: {type(model)}\\n')\n",
+    "print(f'Caracteristicas: {features}\\n')\n",
+    "print(f'Cantidad de caracteristcas: {len(features)}')\n",
+    "    \n",
+    "path_files = data_from_features_model(features=features)\n",
+    "print(type(path_files))\n",
+    "print(f'Los path de todos los files {path_files}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Soils/PIRange-001/PIRange_Bulkd.100-200cm.tif',\n",
+       " 'Soils/PIRange-001/PIRange_Bulkd.5-15cm.tif',\n",
+       " 'Soils/PIRange-001/PIRange_Clay.0-5cm.tif',\n",
+       " 'Soils/PIRange-001/PIRange_Clay.15-30cm.tif',\n",
+       " 'Soils/PIRange-001/PIRange_Clay.5-15cm.tif',\n",
+       " 'Soils/PIRange-001/PIRange_Sand.0-5cm.tif',\n",
+       " 'Soils/PIRange-001/PIRange_Sand.100-200cm.tif',\n",
+       " 'Soils/PIRange-001/PIRange_Sand.15-30cm.tif',\n",
+       " 'Soils/ROSETTA_MEAN/ksat_100-200cm.tif',\n",
+       " 'Soils/ROSETTA_MEAN/ksat_15-30cm.tif',\n",
+       " 'Soils/ROSETTA_MEAN/ksat_60-100cm.tif',\n",
+       " 'Soils/ROSETTA_MEAN/n_15-30cm.tif',\n",
+       " 'Soils/ROSETTA_MEAN/n_5-15cm.tif',\n",
+       " 'Soils/ROSETTA_MEAN/n_60-100cm.tif',\n",
+       " 'Soils/ROSETTA_SD/alpha.0-5cm.tif',\n",
+       " 'Soils/SoilMaps_MEAN/Bulkd.100-200cm.tif',\n",
+       " 'Soils/SoilMaps_MEAN/Bulkd.5-15cm.tif']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path_files = ['Soils/' + path for path in path_files]\n",
+    "path_files"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -1101,19 +1215,7 @@
      "output_type": "stream",
      "text": [
       "Filas: [    1     1     1 ... 11260 11260 11260]\n",
-      "Columnas: [10928 10929 10930 ...   225   226   227]\n",
-      "Longitudes: [-71.0083434  -71.00806578 -71.00778817 ... -73.97962937 -73.97935176\n",
-      " -73.97907415]\n",
-      "Latitudes: [-37.93658034 -37.93658034 -37.93658034 ... -41.06484803 -41.06484803\n",
-      " -41.06484803]\n",
-      "Comenzando a extraer valores de Soils/ROSETTA_MEAN/alpha_5-15cm.tif\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "802515it [00:39, 21759.04it/s]"
+      "Columnas: [10928 10929 10930 ...   225   226   227]\n"
      ]
     }
    ],
@@ -1141,7 +1243,6 @@
     "        print(f'Longitudes: {longitudes}\\nLatitudes: {latitudes}')\n",
     "    data = {'Latitude': latitudes, 'Longitude': longitudes}\n",
     "\n",
-    "    # Iterar sobre los TIFs y extraer los valores en las coordenadas\n",
     "    for tif_path in tif_paths:\n",
     "        values = []\n",
     "        print(\"Comenzando a extraer valores de\", tif_path)\n",
@@ -1158,23 +1259,18 @@
     "    df = pd.DataFrame(data)\n",
     "    return df\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    reference_tif = 'output/output.tif'\n",
-    "    tif_list = [\n",
-    "        'Soils/ROSETTA_MEAN/alpha_5-15cm.tif',\n",
-    "        'Soils/PIRange-001/PIRange_Bulkd.0-5cm.tif',\n",
-    "        'Soils/ROSETTA_SD/alpha.5-15cm.tif',\n",
-    "    ]\n",
+    "reference_tif = 'output/output.tif'\n",
+    "tif_list = path_files\n",
     "\n",
-    "    df = tif_to_dataframe_with_window(reference_tif, tif_list)\n",
-    "    print(df.head())\n",
+    "df = tif_to_dataframe_with_window(reference_tif, tif_list)\n",
+    "print(df.head())\n",
     "\n",
-    "    df.to_csv('extracted_values_2.csv', index=False)"
+    "df.to_csv('model_features_df.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1201,104 +1297,141 @@
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>alpha_5-15cm.tif</th>\n",
+       "      <th>PIRange_Bulkd.0-5cm.tif</th>\n",
+       "      <th>alpha.5-15cm.tif</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1827</th>\n",
-       "      <td>-37.939637</td>\n",
-       "      <td>-71.099400</td>\n",
-       "      <td>0.010</td>\n",
+       "      <th>0</th>\n",
+       "      <td>-37.936580</td>\n",
+       "      <td>-71.008343</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2173</th>\n",
-       "      <td>-37.939914</td>\n",
-       "      <td>-71.107729</td>\n",
-       "      <td>0.013</td>\n",
+       "      <th>1</th>\n",
+       "      <td>-37.936580</td>\n",
+       "      <td>-71.008066</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2174</th>\n",
-       "      <td>-37.939914</td>\n",
-       "      <td>-71.107451</td>\n",
-       "      <td>0.013</td>\n",
+       "      <th>2</th>\n",
+       "      <td>-37.936580</td>\n",
+       "      <td>-71.007788</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2175</th>\n",
-       "      <td>-37.939914</td>\n",
-       "      <td>-71.107173</td>\n",
-       "      <td>0.012</td>\n",
+       "      <th>3</th>\n",
+       "      <td>-37.936580</td>\n",
+       "      <td>-71.007511</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2176</th>\n",
-       "      <td>-37.939914</td>\n",
-       "      <td>-71.106896</td>\n",
-       "      <td>0.012</td>\n",
+       "      <th>4</th>\n",
+       "      <td>-37.936580</td>\n",
+       "      <td>-71.007233</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123340452</th>\n",
-       "      <td>-41.064292</td>\n",
-       "      <td>-73.919387</td>\n",
-       "      <td>0.011</td>\n",
+       "      <th>123340706</th>\n",
+       "      <td>-41.064848</td>\n",
+       "      <td>-73.980185</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123340453</th>\n",
-       "      <td>-41.064292</td>\n",
-       "      <td>-73.919110</td>\n",
-       "      <td>0.012</td>\n",
+       "      <th>123340707</th>\n",
+       "      <td>-41.064848</td>\n",
+       "      <td>-73.979907</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123340454</th>\n",
-       "      <td>-41.064292</td>\n",
-       "      <td>-73.918832</td>\n",
-       "      <td>0.012</td>\n",
+       "      <th>123340708</th>\n",
+       "      <td>-41.064848</td>\n",
+       "      <td>-73.979629</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123340455</th>\n",
-       "      <td>-41.064292</td>\n",
-       "      <td>-73.918555</td>\n",
-       "      <td>0.012</td>\n",
+       "      <th>123340709</th>\n",
+       "      <td>-41.064848</td>\n",
+       "      <td>-73.979352</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123340456</th>\n",
-       "      <td>-41.064292</td>\n",
-       "      <td>-73.918277</td>\n",
-       "      <td>0.012</td>\n",
+       "      <th>123340710</th>\n",
+       "      <td>-41.064848</td>\n",
+       "      <td>-73.979074</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>80933935 rows × 3 columns</p>\n",
+       "<p>123340711 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Latitude  Longitude  alpha_5-15cm.tif\n",
-       "1827      -37.939637 -71.099400             0.010\n",
-       "2173      -37.939914 -71.107729             0.013\n",
-       "2174      -37.939914 -71.107451             0.013\n",
-       "2175      -37.939914 -71.107173             0.012\n",
-       "2176      -37.939914 -71.106896             0.012\n",
-       "...              ...        ...               ...\n",
-       "123340452 -41.064292 -73.919387             0.011\n",
-       "123340453 -41.064292 -73.919110             0.012\n",
-       "123340454 -41.064292 -73.918832             0.012\n",
-       "123340455 -41.064292 -73.918555             0.012\n",
-       "123340456 -41.064292 -73.918277             0.012\n",
+       "            Latitude  Longitude  alpha_5-15cm.tif  PIRange_Bulkd.0-5cm.tif  \\\n",
+       "0         -37.936580 -71.008343               NaN                      NaN   \n",
+       "1         -37.936580 -71.008066               NaN                      NaN   \n",
+       "2         -37.936580 -71.007788               NaN                      NaN   \n",
+       "3         -37.936580 -71.007511               NaN                      NaN   \n",
+       "4         -37.936580 -71.007233               NaN                      NaN   \n",
+       "...              ...        ...               ...                      ...   \n",
+       "123340706 -41.064848 -73.980185               NaN                      NaN   \n",
+       "123340707 -41.064848 -73.979907               NaN                      NaN   \n",
+       "123340708 -41.064848 -73.979629               NaN                      NaN   \n",
+       "123340709 -41.064848 -73.979352               NaN                      NaN   \n",
+       "123340710 -41.064848 -73.979074               NaN                      NaN   \n",
        "\n",
-       "[80933935 rows x 3 columns]"
+       "           alpha.5-15cm.tif  \n",
+       "0                       NaN  \n",
+       "1                       NaN  \n",
+       "2                       NaN  \n",
+       "3                       NaN  \n",
+       "4                       NaN  \n",
+       "...                     ...  \n",
+       "123340706               NaN  \n",
+       "123340707               NaN  \n",
+       "123340708               NaN  \n",
+       "123340709               NaN  \n",
+       "123340710               NaN  \n",
+       "\n",
+       "[123340711 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['alpha_5-15cm.tif'].notna()]"
+    "df"
    ]
   },
   {
