--- a/incursion.ipynb
+++ b/incursion.ipynb
@@ -1298,7 +1298,10 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "99982340it [1:19:49, 20876.94it/s]\n",
+      "  0%|          | 0/17 [1:19:49<?, ?it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -1332,7 +1335,7 @@
     "        print(f'Longitudes: {longitudes}\\nLatitudes: {latitudes}')\n",
     "    data = {'Latitude': latitudes, 'Longitude': longitudes}\n",
     "\n",
-    "    for tif_path in tqdm(tif_paths):\n",
+    "    for tif_path in tif_paths:\n",
     "        values = []\n",
     "        print(\"Comenzando a extraer valores de\", tif_path)\n",
     "        with rasterio.open(tif_path) as src:\n",
@@ -1347,7 +1350,7 @@
     "    \n",
     "    # agregar valores de slope y pp    \n",
     "    list_path = ['output/output.tif', 'output/output_pp.tif']\n",
-    "    for tif_path in tqdm(list_path):\n",
+    "    for tif_path in list_path:\n",
     "        values = []\n",
     "        print(\"Comenzando a extraer valores de\", tif_path)\n",
     "        with rasterio.open(tif_path) as src:\n",
