avance en main.py simplificado

--- a/incursion.ipynb
+++ b/incursion.ipynb
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1212,6 +1212,15 @@
       "<class 'list'>\n",
       "Los path de todos los files ['PIRange-001/PIRange_Bulkd.100-200cm.tif', 'PIRange-001/PIRange_Bulkd.5-15cm.tif', 'PIRange-001/PIRange_Clay.0-5cm.tif', 'PIRange-001/PIRange_Clay.15-30cm.tif', 'PIRange-001/PIRange_Clay.5-15cm.tif', 'PIRange-001/PIRange_Sand.0-5cm.tif', 'PIRange-001/PIRange_Sand.100-200cm.tif', 'PIRange-001/PIRange_Sand.15-30cm.tif', 'ROSETTA_MEAN/ksat_100-200cm.tif', 'ROSETTA_MEAN/ksat_15-30cm.tif', 'ROSETTA_MEAN/ksat_60-100cm.tif', 'ROSETTA_MEAN/n_15-30cm.tif', 'ROSETTA_MEAN/n_5-15cm.tif', 'ROSETTA_MEAN/n_60-100cm.tif', 'ROSETTA_SD/alpha.0-5cm.tif', 'SoilMaps_MEAN/Bulkd.100-200cm.tif', 'SoilMaps_MEAN/Bulkd.5-15cm.tif']\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ivo\\.conda\\envs\\rasterio\\lib\\site-packages\\sklearn\\base.py:376: InconsistentVersionWarning: Trying to unpickle estimator RandomizedSearchCV from version 1.3.2 when using version 1.5.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -1227,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1261,7 @@
        " 'Soils/SoilMaps_MEAN/Bulkd.5-15cm.tif']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,6 +1269,96 @@
    "source": [
     "path_files = ['Soils/' + path for path in path_files]\n",
     "path_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Realizando meshgrid...\n",
+      "rows: [    0     0     0 ... 11261 11261 11261]\n",
+      "cols: [    0     1     2 ... 11589 11590 11591]\n",
+      "Realizando transform desde xy...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Procesando archivos:   0%|          | 0/19 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "import rasterio\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "import multiprocessing as mp\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "import numpy as np\n",
+    "from functools import partial\n",
+    "\n",
+    "def tif_to_dataframe_with_window_parallel(reference_tif: str, tif_paths: list[str]):\n",
+    "    def process_tif(args):\n",
+    "        tif_path, longs, lats, ref_crs = args\n",
+    "        with rasterio.open(tif_path) as src:\n",
+    "            if src.crs != ref_crs:\n",
+    "                raise ValueError(f\"El CRS de {tif_path} no coincide con el del TIF de referencia.\")\n",
+    "            # Vectorized sampling\n",
+    "            values = np.array([x[0] if x else np.nan for x in src.sample(zip(longs, lats))])\n",
+    "            return tif_path.split('/')[-1], values\n",
+    "\n",
+    "    with rasterio.open(reference_tif) as ref_src:\n",
+    "        \n",
+    "        meta = ref_src.meta\n",
+    "        ref_array = ref_src.read(1)\n",
+    "        ref_transform = ref_src.transform\n",
+    "        height = meta['height']\n",
+    "        width = meta['width']\n",
+    "        #mask = ref_array != ref_src.nodatavals[0]\n",
+    "        #rows, cols = np.where(mask)\n",
+    "        print('Realizando meshgrid...')\n",
+    "        rows, cols = np.meshgrid(range(height), range(width), indexing='ij')\n",
+    "        print(f'rows: {rows.flatten()}\\ncols: {cols.flatten()}')\n",
+    "        print('Realizando transform desde xy...')\n",
+    "        xs, ys = rasterio.transform.xy(ref_src.transform, rows.flatten(), cols.flatten())\n",
+    "        # Get coordinates\n",
+    "        longitudes = np.array(xs)\n",
+    "        latitudes = np.array(ys)\n",
+    "        \n",
+    "        # Combine all paths\n",
+    "        all_paths = tif_paths + ['output/output.tif', 'output/output_pp.tif']\n",
+    "        \n",
+    "        # Prepare arguments for parallel processing\n",
+    "        args = [(path, longitudes, latitudes, ref_src.crs) for path in all_paths]\n",
+    "        \n",
+    "        # Process in parallel\n",
+    "        with ThreadPoolExecutor(max_workers=mp.cpu_count()-1) as executor:\n",
+    "            results = list(tqdm(\n",
+    "                executor.map(lambda x: process_tif(x), args),\n",
+    "                total=len(all_paths),\n",
+    "                desc=\"Procesando archivos\"\n",
+    "            ))\n",
+    "        \n",
+    "        # Create DataFrame\n",
+    "        data = {\n",
+    "            'Latitude': latitudes,\n",
+    "            'Longitude': longitudes,\n",
+    "            **dict(results)\n",
+    "        }\n",
+    "        \n",
+    "        return pd.DataFrame(data)\n",
+    "\n",
+    "reference_tif = 'output/output.tif'\n",
+    "tif_list = path_files\n",
+    "df = tif_to_dataframe_with_window_parallel(reference_tif, tif_list)\n",
+    "df.to_csv('model_features_df.csv', index=False)"
    ]
   },
   {
